# computernet

./: .gitignore  AGENTS.md
SimplePortScanner/: CMakeLists.txt  README.md
SimplePortScanner/docs/: advice_for_v2.md  cross-platform-socket-plan.md  host-discovery-test.md  service-detection-test.md  web-visualization-v1-plan.md  web-visualization-v2-style-plan.md
SimplePortScanner/src/: BannerGrabber.cpp  BannerGrabber.h  CliApp.cpp  CliApp.h  ConsoleUtil.cpp  ConsoleUtil.h  HostDiscovery.cpp  HostDiscovery.h  IpParser.cpp  IpParser.h  LocalNetwork.cpp  LocalNetwork.h  NetCompat.cpp  NetCompat.h  PortParser.cpp  PortParser.h  ResultWriter.cpp  ResultWriter.h  Scanner.cpp  Scanner.h  ServiceDetector.cpp  ServiceDetector.h  ServiceMap.cpp  ServiceMap.h  WebApp.cpp  WebApp.h  main.cpp
SimplePortScanner/web/: app.js  index.html  styles.css  v2-poster.css  v2-poster.js  v2.css  v2.html  v2.js
